--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+p {
+    cursor: pointer;
+    color: blue;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
