--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,43 +1,141 @@
-.App {
-  text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}  
+
+body {
+    background-image: linear-gradient(#ffffff 0%, #67B594 100%);
+    color: white;
+    font-family: sans-serif;
+    min-height: 100vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+.page-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-p {
+.login-box {
+    position: relative;
+    top: -100px;
+    width: 500px;
+    height: 500px;    
+    background: #32C992;
+    border: 1px solid black;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.login-div {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 50%;
+    width: 100%;
+}
+
+.login-form {
+    position: absolute;
+    left: 0;
+    top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+
+    
+}
+
+.register-form {
+    position: absolute;
+    left: 0;
+    top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+
+    
+}
+
+.form-input {
+    text-align: center;
+    margin: 3px;
+    border: 1px solid;
+    outline: none;
+    border-radius: 5px;
+    background: #32C96E;
+    width: 80%;
+    height: 34px;
+
+}
+.buttons {
+    width: 40%;
+    height: 34px;
+    background: #32B5C9;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+.logo {
+    position: absolute;
+    height: 50%;
+    width: 50%;
+    background-image: url(logoImages/logo_transparent.png);
+    background-size: cover;
+    top: 0;
+}
+
+.register-click {
+    position: absolute;
     cursor: pointer;
     color: blue;
+    bottom: -5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.loginButton {
+    position: relative;
+    top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.registerButton {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.fpwrd-text {
+    right: 50px;
+    top: 140px;
+    cursor: pointer;
+    color: blue;
+    position: absolute;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
