--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,9 +23,9 @@ body {
 
 .login-box {
     position: relative;
-    top: -100px;
+    top: -20px;
     width: 500px;
-    height: 500px;    
+    height: 700px;    
     background: #32C992;
     border: 1px solid black;
     box-sizing: border-box;
@@ -58,9 +58,7 @@ body {
     flex-direction: column;
     padding: 0;
     width: 100%;
-    height: 100%;
-
-    
+    height: 100%; 
 }
 
 .register-form {
@@ -80,7 +78,9 @@ body {
 
 .form-input {
     text-align: center;
-    margin: 3px;
+    margin: 5px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     border: 1px solid;
     outline: none;
     border-radius: 5px;
@@ -100,11 +100,13 @@ body {
 
 .logo {
     position: absolute;
+    bottom: 500px;
     height: 50%;
-    width: 50%;
+    width: 70%;
     background-image: url(logoImages/logo_transparent.png);
     background-size: cover;
-    top: 0;
+    top: -20px;
+    left: 80px;
 }
 
 .register-click {
@@ -133,7 +135,7 @@ body {
 
 .fpwrd-text {
     right: 50px;
-    top: 140px;
+    top: 200px;
     cursor: pointer;
     color: blue;
     position: absolute;
