--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -141,3 +141,42 @@ body {
     position: absolute;
 }
 
+.navbar {
+    background-color: rgb(26, 163, 106);
+    color: rgb(0, 0, 0);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 100px;
+    width: 100%;
+}
+
+.fullscreen {
+    position: fixed;
+    width: 100%;
+    height: 100%
+}
+
+.navbuttons {
+    width: 10%;
+    margin-left: 30px;
+    margin-right: 30px;
+    position: relative;
+    height: 50%;
+    background: #7af0d2;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.navlogo {
+    position: relative;
+    height: 50%;
+    width: 10%;
+    background-image: url(logoImages/logo_transparent.png);
+    background-size: cover;
+}
