--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -142,41 +142,115 @@ body {
 }
 
 .navbar {
+    position: relative;
     background-color: rgb(26, 163, 106);
     color: rgb(0, 0, 0);
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    height: 100px;
     width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    
 }
 
 .fullscreen {
     position: fixed;
     width: 100%;
-    height: 100%
-}
-
-.navbuttons {
-    width: 10%;
-    margin-left: 30px;
-    margin-right: 30px;
-    position: relative;
-    height: 50%;
-    background: #7af0d2;
-    border: 1px solid #000000;
-    box-sizing: border-box;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+    height: 100%;
 }
 
 .navlogo {
-    position: relative;
-    height: 50%;
-    width: 10%;
+    float: left;
+    margin-top : -60px;
+    height: 200px;
+    width: 200px;
     background-image: url(logoImages/logo_transparent.png);
     background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    margin-right: -10px;
+
+}
+
+.navbuttons {
+
+    width: 10%;
+    height: 50%;
+    background: #7af0d2;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-top : -60px; */
+    cursor: pointer;
+    margin: -60px 100px 0;
+}
+
+@media (max-width: 1700px) {
+    .navlogo {
+        margin-right: 0;
+
+    }
+
+    .navbuttons {
+        margin-left: -50px;
+        margin-top: -60px;
+    }
+}
+
+.profile-div {
+    position: relative;
+    width: 30%;
+    height: 70%;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    margin: 2% 10%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+.logoutButton {
+    position: absolute;
+    bottom: 0;
+    width: 30%;
+    height: 5%;
+    margin: 0 0 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background: #32B5C9;
+}
+
+.logoutButton:hover {
+    outline: none;
+}
+
+.loggedInDiv {
+    width: 100%;
+    height: 10%;
+    background: #32B5C9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.groups-div {
+    position: fixed;
+    margin: 2% 10%;
+    right: -100px;
+    top: 100px;
+    width: 50%;
+    height: 70%;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.homepage-groups {
+    list-style: none;
 }
