--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+
 }  
+
 
 body {
     background-image: linear-gradient(#ffffff 0%, #67B594 100%);
@@ -13,6 +17,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    
+
   }
 
 .page-div {
@@ -143,6 +149,7 @@ body {
 
 .navbar {
     position: relative;
+    top: 0;
     background-color: rgb(26, 163, 106);
     color: rgb(0, 0, 0);
     width: 100%;
@@ -150,11 +157,12 @@ body {
     display: flex;
     align-items: center;
     margin: 0;
-    
+    z-index: 999;
+    box-shadow: 1px 1px 5px #000000;
 }
 
 .fullscreen {
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 100%;
 }
@@ -173,7 +181,6 @@ body {
 }
 
 .navbuttons {
-
     width: 10%;
     height: 50%;
     background: #7af0d2;
@@ -182,7 +189,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* margin-top : -60px; */
     cursor: pointer;
     margin: -60px 100px 0;
 }
@@ -200,15 +206,17 @@ body {
 }
 
 .profile-div {
-    position: relative;
+    position: absolute;
     width: 30%;
     height: 70%;
-    border: 1px solid #000000;
+    /* border: 1px solid #000000; */
     border-radius: 5px;
     margin: 2% 10%;
     display: flex;
     align-items: center;
     flex-direction: column;
+    background-color: rgb(255, 248, 248);
+    box-shadow: 0.01px 0.01px 5px #000000;
 }
 
 
@@ -220,7 +228,10 @@ body {
     margin: 0 0 5px;
     border: 1px solid black;
     border-radius: 5px;
-    background: #32B5C9;
+    background: #1cd579;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .logoutButton:hover {
@@ -228,29 +239,70 @@ body {
 }
 
 .loggedInDiv {
+    position: absolute;
     width: 100%;
     height: 10%;
-    background: #32B5C9;
+    background:#1cd579;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #000000;
+}
+
+.loggedInName {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-
 .groups-div {
-    position: fixed;
+    position: absolute;
     margin: 2% 10%;
     right: -100px;
-    top: 100px;
-    width: 50%;
+    /* top: 100px; */
+    width: 40%;
     height: 70%;
-    border: 1px solid #000000;
-    border-radius: 5px;
+    /* border: 1px solid #000000; */
+    /* border-radius: 5px; */
     display: flex;
     justify-content: center;
-
+    align-items: center;
+    flex-direction: column;
 }
 
 .homepage-groups {
+    display: flex;
+    justify-content: center;
     list-style: none;
+}
+
+.group-names {
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 15%;
+    /* border: 1px solid black; */
+    border-radius: 2px;
+    margin: 0 0 10px;
+    box-shadow: 0.01px 0.01px 5px #000000;
+
+}
+
+.hpg-group-button{
+    position: absolute;
+    width: 15%;
+    height: 5%;
+    right: 0;
+    border: 1px solid black;
+    margin: 0 5px 0;
+    border-radius: 20px ;
+    background-color: #1cd579;
+    font-size: small;
+}
+
+.hpg-group-button:focus {
+    outline: none;
 }
