--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -71,9 +71,7 @@ body {
     flex-direction: column;
     padding: 0;
     width: 100%;
-    height: 100%;
-
-    
+    height: 100%;  
 }
 
 .form-input {
@@ -87,8 +85,8 @@ body {
     background: #32C96E;
     width: 80%;
     height: 34px;
-
 }
+
 .buttons {
     width: 40%;
     height: 34px;
@@ -253,4 +251,123 @@ body {
 
 .homepage-groups {
     list-style: none;
+}
+
+.searchTable {
+    background-color: hotpink;
+}
+
+.search-input {
+    position: static;
+    float:left;
+    border: 1px solid;
+    background: #32C96E;
+    padding-left: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 20%;
+    height: 34px;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+/* position: absolute;
+text-align: left;
+margin: 5px;
+padding-left: 10px;
+padding-top: 20px;
+padding-bottom: 20px;
+border: 1px solid;
+outline: none;
+border-radius: 5px;
+background: #32C96E;
+width: 20%;
+height: 34px;
+margin: 0;
+position: absolute;
+top: 20%;
+left: 37%;
+transform: translate(-50%, -50%); */
+
+.searchButton {
+    position: static;
+    float:left;
+    width: 15%;
+    height: 40px;
+    background: #32B5C9;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+/* position: absolute;
+top: 30px;
+width: 30%;
+justify-content: center;
+top: 0%;
+margin-left: 50px;
+right: 20%; */
+
+/* .buttons {
+    width: 40%;
+    height: 34px;
+    background: #32B5C9;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    border-radius: 5px;
+} */
+
+.searchWrapper {
+    position: relative;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    padding-left: 33%;
+}
+
+.searchTable {
+    position: relative;
+    background-color: hotpink;
+}
+
+.fullSearch {
+    width:100%;
+    height: 80%;
+    position: absolute;
+    overflow: hidden;
+    overflow-y: scroll;
+    justify-content: center;
+}
+
+.searchyTable {
+    position: relative;
+    width: 100%;
+    margin: 2%;
+    border-collapse:separate; 
+    border-spacing:5px;
+    left: 7%;
+}
+
+.groupName {
+    background-color: rgb(134, 212, 167);
+    margin-top: 5px;
+    padding-left: 20px;
+    border-radius: 15px;
+    width: 70%;
+    border: 1px solid #000000;
+}
+
+.joinButton {
+    background: #32B5C9;
+    border: 1px solid #000000;
+    border-radius: 15px;
+    height: 40px;
+    width: 40%;
+}
+
+.searchRow {
+    padding-bottom: 5px;
+    padding-top: 5px;
+    margin: 5px;
 }
