--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,10 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    width: 100%;
-    height: 100%;
 
 }  
+
 
 
 body {
@@ -17,19 +16,28 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    
-
   }
 
 .page-div {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+}
+.page-div2 {
+    position: relative;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 .login-box {
-    position: relative;
-    top: -20px;
+    position: absolute;
     width: 500px;
     height: 700px;    
     background: #32C992;
@@ -41,7 +49,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
 }
 
 .login-div {
@@ -145,19 +152,6 @@ body {
     position: absolute;
 }
 
-.navbar {
-    position: relative;
-    top: 0;
-    background-color: rgb(26, 163, 106);
-    color: rgb(0, 0, 0);
-    width: 100%;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    margin: 0;
-    z-index: 999;
-    box-shadow: 1px 1px 5px #000000;
-}
 
 .fullscreen {
     position: relative;
@@ -165,31 +159,62 @@ body {
     height: 100%;
 }
 
-.navlogo {
-    float: left;
-    margin-top : -60px;
-    height: 200px;
-    width: 200px;
-    background-image: url(logoImages/logo_transparent.png);
-    background-size: cover;
-    background-repeat: no-repeat;
+.navbar {
+    position: relative;
+    top: 0;
+    background-color: rgb(26, 163, 106);
+    color: rgb(0, 0, 0);
+    width: 100%;
+    height: 100px;
+    z-index: 999;
+    box-shadow: 1px 1px 5px #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.nav-logo-div {
+    display: flex;
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
     cursor: pointer;
-    margin-right: -10px;
+}
+
+.nav-logo {
+    position: absolute;
+    top: -75px;
+    left: -40px;
+    width: 250px;
+    height: auto;
+}
+
+.navbuttons-div {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-between;
+    align-items: center;
+    flex-flow: wrap;
 
 }
 
 .navbuttons {
-    width: 10%;
+    width: 15%;
     height: 50%;
-    background: #7af0d2;
-    border: 1px solid #000000;
-    border-radius: 10px;
+    border: 1px solid black;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    background: #7af0d2;
+    border-radius: 10px;
     cursor: pointer;
-    margin: -60px 100px 0;
+    margin: 0 50px 0 -50px;
 }
+
 
 @media (max-width: 1700px) {
     .navlogo {
