--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -565,3 +565,81 @@ right: 20%; */
     background-color: #1cd579;
     font-size: small;
 }
+
+.post-issue {
+    width: 500px;
+    max-width: 100%;
+    margin: 0 auto;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(209, 250, 255);
+    border-radius: 20px ;
+    padding: 5px;
+    align-content: center;
+    border:1px solid black;
+}
+
+.topic-input {
+    text-align: left;
+    margin: 5px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 5%;
+    border: 1px solid;
+    outline: none;
+    border-radius: 5px;
+    background: #ffffff;
+    width: 80%;
+    height: 34px;
+    margin-left: 10%;
+}
+
+.desc-input {
+    text-align: left;
+    margin: 5px;
+    border: 1px solid;
+    outline: none;
+    border-radius: 5px;
+    background: #ffffff;
+    width: 80%;
+    height: 68px;
+    padding: 3px;
+    margin-left: 10%;
+}
+
+.issue-submit {
+    bottom: 0;
+    width: 40%;
+    height: 5%;
+    margin-left: 30%;
+    border: 1px solid black;
+    border-radius: 5px;
+    background: #b9e0ff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.x-button {
+    bottom: 0;
+    width: 5%;
+    height: 5%;
+    margin-left: 95%;
+    border: 1px solid black;
+    border-radius: 100%;
+    background: #b9e0ff;
+}
+.post-header{
+    position: relative;
+    width: 100%;
+}
+.dark{
+    position: absolute;
+    min-width: 100%;
+    min-height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+}
