text color fixes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -403,6 +403,7 @@ right: 20%; */
     border-radius: 15px;
     width: 70%;
     border: 1px solid #000000;
+    color: black;
 }
 
 .joinButton {
@@ -430,6 +431,7 @@ right: 20%; */
     border-radius: 2px;
     margin: 0 0 10px;
     box-shadow: 0.01px 0.01px 5px #000000;
+    color: black;
 
 }
 
@@ -549,6 +551,7 @@ right: 20%; */
 .mygroup-names {
     background: white;
     display: flex;
+    color: black;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -619,6 +622,7 @@ right: 20%; */
 }
 
 .myissue-names {
+    color: black;
     background: white;
     display: flex;
     justify-content: center;
