--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -783,14 +783,14 @@ right: 20%; */
 
 .myissue-viewissue-issuereplies {
 
-    position: relative;
+    /* position: relative; */
     /* display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;  */
     width: 100%;
+    height: 70%;
     overflow-y: scroll;
-    overflow: hidden;
     padding: 10px;
 
 
